# claudeinsights

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
claudeinsights/: __init__.py  analyze.py  cli.py  discover.py  insights.py  model.py  parse.py  pricing.py  render.py  selftest.py  terminal.py  util.py  wrapped.py
claudeinsights/assets/: template.html
docs/: ARCHITECTURE.md  METRICS.md  STRATEGY.md
examples/: demo.html  generate_sample.py
examples/sample-logs/: 00000001-0000-4000-8000-000000000000.jsonl  00000002-0000-4000-8000-000000000001.jsonl  00000003-0000-4000-8000-000000000001.jsonl  00000004-0000-4000-8000-000000000002.jsonl  00000005-0000-4000-8000-000000000002.jsonl  00000006-0000-4000-8000-000000000003.jsonl  00000007-0000-4000-8000-000000000003.jsonl  00000008-0000-4000-8000-000000000004.jsonl  00000009-0000-4000-8000-000000000004.jsonl  00000010-0000-4000-8000-000000000004.jsonl  00000011-0000-4000-8000-000000000004.jsonl  00000012-0000-4000-8000-000000000005.jsonl  00000013-0000-4000-8000-000000000005.jsonl  00000014-0000-4000-8000-000000000005.jsonl  00000015-0000-4000-8000-000000000006.jsonl  00000016-0000-4000-8000-000000000006.jsonl  00000017-0000-4000-8000-000000000006.jsonl  00000018-0000-4000-8000-000000000006.jsonl  00000019-0000-4000-8000-000000000007.jsonl  00000020-0000-4000-8000-000000000007.jsonl  00000021-0000-4000-8000-000000000008.jsonl  00000022-0000-4000-8000-000000000008.jsonl  (+44 more)
tests/: conftest.py  test_analyze.py  test_parse.py  test_pricing.py  test_render_cli.py
